fix card spacing

--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,19 +1,18 @@
-/* .container {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 50px;
+.login{
+  min-height: 100vh;
+}
+.bg-image{
+  background-image: url('/public/login.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
-.label,
-.button {
-  margin-right: 0.5rem;
+.login-heading{
+  font-weight: 300;
 }
 
-.inputContainer {
-  margin-bottom: 1rem;
-  
-} */
-
-
+.btn-login{
+  font-size: 0.9rem;
+  letter-spacing: 0.05rem;
+  padding: 0.75rem 1rem;
+}
